Working on methods (in the middle of it now)

--- a/refs.bib
+++ b/refs.bib
@@ -349,6 +349,17 @@
   publisher={The Company of Biologists Ltd}
 }
 
+@article{costa2007networks,
+  title={Characterization of complex networks: A survey of measurements},
+  author={Costa, L da F and Rodrigues, Francisco A and Travieso, Gonzalo and Villas Boas, Paulino Ribeiro},
+  journal={Advances in physics},
+  volume={56},
+  number={1},
+  pages={167--242},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+
 @article{fagiolo2007,
   title={Clustering in complex directed networks},
   author={Fagiolo, Giorgio},
@@ -727,6 +738,14 @@
   pages={147--158},
   year={2011},
   publisher={Elsevier}
+}
+
+@article{hernandez2011metrics,
+  title={Classification of graph metrics},
+  author={Hern{\'a}ndez, Javier Mart{\i}n and Van Mieghem, Piet},
+  journal={Delft University of Technology: Mekelweg, The Netherlands},
+  pages={1--20},
+  year={2011}
 }
 
 @article{lindner2011trentool,
