--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 \usepackage{helvet} % Set font to Arial-like
 \renewcommand{\familydefault}{\sfdefault} % Force this font
 
-\usepackage[round, sort, numbers, authoryear]{natbib} % Reference manager, round citations
+\usepackage[round, numbers, authoryear]{natbib} % Reference manager, round citations, unsorted
 % \usepackage[super]{natbib} % Nature-style citations
 % \setcitestyle{citesep={,}} % For nature-style, comma instead of ;
 
@@ -98,7 +98,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 
 \section*{Abstract}
 % 206 words now; should be 200
-Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For some animals, key computations involved in looming detection and collision avoidance are performed by distributed networks, making it hard to tease out underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report differences in degree distributions and modularity of networks reconstructed from younger and older animals, and show that looming-selective cells tended to serve as activation sinks within the network. We compare these results to predictions from a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured inputs. We show that the model developed robust looming selectivity, and replicated several effects observed in imaging experiments, including changes in modularity and degree distribution. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were not observed in imaging experiments. By comparing several reduced models, we predict which developmental rules are most critical for the development of looming selectivity in the brain.
+Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For many animals, key computations involved in looming detection and collision avoidance are performed by distributed networks, making it hard to tease out underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report differences in degree distributions and modularity of networks reconstructed from younger and older animals, and show that looming-selective cells tended to serve as activation sinks within the network. We compare these results to predictions from a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured inputs. We show that the model developed robust looming selectivity, and replicated several effects observed in imaging experiments, including changes in modularity and degree distribution. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were not observed in imaging experiments. By comparing several reduced models, we predict which developmental rules are most critical for the development of looming selectivity in the brain.
 %TC:ignore 
 \bigskip
 
@@ -111,26 +111,17 @@ Looming is one of the most salient visual stimuli an animal may encounter, yet m
 
 % Send to Silas: https://www.youtube.com/watch?v=vtIzMaLkCaM
 
-Few sensory stimuli are as ill boding for an animal as visual looming. A retinal projection that is small at first, but is quickly growing in size, may promise a painful collision, or a meeting with a predator, and so it inherently calls for an action: an avoidance maneuver, freezing, or defensive posturing, such as a blink. Moreover, to be meaningful, looming detection has to be fast. Not surprisingly, it is described in virtually every type of animals that uses vision, from insects to primates \citep{Pereira2016}. % While there was progress in invertebrates, in vertebrates - still unclear.
+Few sensory stimuli are as ill boding for an animal as a visual loom. A retinal projection that is small at first, but quickly grows in size, may promise a painful collision, or meeting with a predator, and so it inherently calls for action: an avoidance maneuver, freezing, or defensive posturing, such as a blink. Moreover, to be meaningful, looming detection has to be fast. Not surprisingly, it is described in virtually every animal that uses vision, from insects to primates \citep{Pereira2016}. And yet, while our understanding of looming detection in insects has recently improved \citep{rind2016locust,von2017fruitfly}, the mechanisms that underlie collision avoidance in vertebrates are still unclear.
 
-% Three interesting problems: 1) how does it work in vertebrates, 2) how does it develop, for example, is it hardwired or learned. 
-% Then introduce possible solutions (across all animals).
-% Then introduce tectum (not currently present in the text), How to build a set of detectors to support looming stimuli coming from different directions? Cite frost here.
-% Then say that in view of this co-existence of different solutions (from 2 paragraphs above) isn't that much of a paradox. Exclude tadpoles form this paragraph though; or add zebrafish. Arrive at a synfire chanin hypothesis.
-% Then introduce tadpoles that are going to save the world. How they are so useful.
-% Then write about the golden standarad of figuring things out, and how our approach is better. 
-% Describe the model. 
-% Explain very clearly that we are trying to figure out 1) whether we can see pieces of topology in ca imaging recordings; 2) whether these pieces of topology look like something that could potentially support looming detection; 3) use a model to whether looming-detecting topology can emerge during reinforcement learning in a brain, and if yes, then what is the topology there, and whether it matches whatever was observed in biological experiments.
+For vertebrates, it is well established that looming-selective circuits are located in a midbrain structure known as superior colliculus in mammals, and optic tectum in all other clades \citep{frost2004review, liu2011cat, khakhalin2014, dunn2016escapesZF}. It is not known however how these midbrain circuits actually perform required computations. It is also not clear whether looming detection and collision avoidance in vertebrates are innate (and so possibly hardwired), or whether they need to be  learned. Finally, to navigate, animals need to calculate not just \textit{whether} a collision is about to happen, but also \textit{where} a looming stimulus is coming from. While it is known that the tectum harbors a retinotopic map of the visual field \citep{ruthazer2004map,mclaughlin2003retinotopic}, there are several competing theories about how looming detectors may be distributed within this map \citep{frost2004review}.
 
-In different animals, looming detection seems to rely on a variety of network solutions \citep{frost2004review} that include dimming detectors in the retina \citep{ishikane2005,munch2009}, opponent motion detection \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation,fotowat2011multiplexing}. Even within a single clade of anuran amphibians (frogs), animals seem to employ at least two competing looming detection mechanisms: non-linear detection of retinal oscillations \citep{baranauskas2012}, and rebound of recurrent activity \citep{khakhalin2014,jang2016}. Moreover, it seems that competing mechanisms may lead to different motor responses, as described in insects \citep{card2008tradeoffs,chan2013avoidance}, fish \citep{burgess2007twoescapes,portugues2009behaviors,budick2000repertoire,temizer2015pathway,bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
+What type of calculation may in principle underlie looming behaviors? Across species, the logic of looming detection is varying and diverse, and includes dimming detectors \citep{ishikane2005,munch2009}, integration of opponent motion \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation,fotowat2011multiplexing}. Even within a single clade of anuran amphibians (frogs), animals seem to employ at least two competing mechanisms to detect looms: a non-linear response to dimming-induced retinal oscillations \citep{baranauskas2012}, and rebound of recurrent activity during edge expansion \citep{khakhalin2014,jang2016}. Moreover, at least in some cases, competing mechanisms may lead to different motor responses, as described in insects \citep{card2008tradeoffs,chan2013avoidance}, fish \citep{burgess2007twoescapes,portugues2009behaviors,budick2000repertoire,temizer2015pathway,bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
 
-It may seem puzzling that a brain would use several unrelated approaches to solve one practical problem, but this arrangement may make sense developmentally. Simple, crude ways of classifying sensory stimuli can be used to train more sophisticated and efficient networks, capable of nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. For looming stimuli in tadpoles, early in development, when collision detection is still poor \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina \citep{baranauskas2012} both to detect collisions, and to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, tectal networks can serve as a first line of defense, identifying early phases of looming, and helping motor neurons in the hindbrain to perform fine course correction \citep{khakhalin2014,bhattacharyya2017assessment}, while dimming detectors remain as a backup, mediating more urgent and less coordinated responses \citep{khakhalin2014}. Moreover, every time collision avoidance is not performed perfectly, sensorimotor networks can be refined, based on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016, helmbrecht2018topography}.
+It may seem puzzling that a brain would combine several conflicting approaches to solve one practical problem, but this arrangement may make sense developmentally. Simple, crude ways of identifying dangerous sensory stimuli can be used to train more sophisticated and efficient networks, capable of nuanced sensory analysis at later stages of development \citep{marblestone2016deeplearning}. For example, young aquatic animals may use "hardwired" dimming receptors \citep{baranauskas2012} both to avoid collisions \citep{dong2009}, and to "bootstrap" more sophisticated motion-dependent networks in the tectum. Later, these nuanced motion-detecting networks would serve as a first line of defense, identifying early phases of looming, and helping to perform fine course correction \citep{khakhalin2014,bhattacharyya2017assessment}, while dimming detectors would remain as a backup, mediating urgent and less coordinated responses \citep{khakhalin2014}. Moreover, every time collision avoidance is not performed perfectly, sensorimotor networks can be refined, based on mechanosensory inputs from the lateral line and from the skin \citep{felch2016, helmbrecht2018topography}.
 
-Traditionally, the golden standard for describing a behavioral mechanism is to demonstrate that a pattern of neuronal activation is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in systems that are compact and isolated, such as acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}. Yet many systems in the brain are distributed and deeply interconnected, making it hard to represent them as a sum of individual "parts", with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. In this case, a more promising approach is to study the development of structured functional connectivity in the brain, as biological neural networks are almost never truly hardwired, but rather dynamically evolve, governed by developmental rules \citep{pietri2017emergence}, in interplay with patterned activation \citep{gao2015simplicity}. This insight is encouraging, as developmental rules act at the level of individual cells and their compartments, such as dendrites and synapses, which implies that while the ultimate product of these rules is exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. It suggests that our best chance to truly “understand” the brain may lie in identifying the space of rules that lead to the development of functional networks \citep{linderman2017constrain}. This general approach proved to be fruitful in recent years, as several complex network phenomena, including high-order receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules. 
+In this paper, we use high-speed calcium imaging and functional connectivity reconstruction to search for looming detectors within recurrent networks in the developing optic tectum of \textit{Xenopus} tadpoles. Tadpole tectum is uniquely suitable for studies of sensory integration, as it is excessively plastic \citep{pratt2007intrinsic,busch2019}, strongly interconnected \citep{james2015}, and develops reliable looming selectivity within about a week \citep{dong2009,khakhalin2014}, as tadpoles mature from Nieuwkoop stage 46 to stage 49. We hypothesize that looming detectors may emerge in development, as connections between tectal cells are reshaped by pattern visual stimuli. Sequences of neurons, known as synfire chains \citep{fiete2010chains,zheng2014synfire}, are known to develop in networks governed by spike-time-dependent plasticity, which happens to be strong in the tadpole tectum \citealt{zhang1998stdp, mu2006stdp, vislay2006rf, richards2010stdp}). Synfire chains are selectively responsive to input patterns that activate neurons in the same sequence in which they are connected \citep{clopath2010stdpcoding}, allowing for spatiotemporal sequence detection. As tectal neurons in tadpoles spike relatively slowly, with broad action potentials and long refractory periods, synfire chains in the tectum are expected to have transmission delays from one neuron to another of up to 10 ms \citep{ciarleglio2015,jang2016,busch2019}, compared to $\sim$2 ms in a mammalian cortex. This slow signal propagation brings it to the threshold of direct observation by fast calcium imaging techniques, operating at rates of $\sim$100 frames/s.
 
-In this paper, we look at connectomic correlates of looming selectivity in the developing optic tectum of \textit{Xenopus} tadpoles. As a model, tadpole tectum is uniquely suitable for studies of sensory integration, as its neurons are excessively plastic \citep{pratt2007intrinsic,busch2019}, strongly interconnected \citep{james2015}, and develop reliable looming selectivity within about a week of development, as tadpoles mature from developmental stage 46 to stage 49 \citep{dong2009,khakhalin2014}. At early developmental stages, the refinement of tectal connectivity is dominated by spike-time-dependent plasticity (STDP; \citealt{zhang1998stdp,mu2006stdp,vislay2006rf,richards2010stdp}). From studies in other models, we know that STDP favors the development of so called synfire chains \citep{fiete2010chains,zheng2014synfire}: groups of neurons linked to each other with sequential synaptic connections. Synfire chains tend to be selectively responsive to activation patterns that arrive at the same sequence in which neurons are connected, turning them into temporal pattern detectors \citep{clopath2010stdpcoding}. As neurons in tadpole tectum spike relatively slowly, with broad spikes and long refractory periods \citep{ciarleglio2015,jang2016,busch2019}, synfire chains can be expected to have transmission delays from one neuron to another of up to 10 ms, compared to $\sim$2 ms in a mammalian cortex. This slower signal propagation brings connections within the tectum to the threshold of direct detection by fast calcium imaging techniques that operate at rates of $\sim$100 frames/s, allowing observations of not just co-firing of neurons within each ensemble or clique \citep{reimann2017,avitan2017spontaneous}, but propagation of signal within these ensembles.
-
-Here we use high-speed calcium imaging data to infer connectivity of small sub-networks within the tectum. We describe connectivity patterns in younger and older tadpoles, and compare them to predictions from a simulation in a simple developmental model. We hypothesize that by comparing statistical properties of networks generated by a family of models to networks reconstructed in imaging experiments we should be able to reverse-engineer developmental rules that govern development of looming-sensitive networks in the tectum. We show that our model predicted some, but not all aspects of topology and functionality in looming-sensitive networks, making it hard to draw simple conclusions. Nevertheless, we report several new findings, including some surprising negative results, and as a proof of concept, demonstrate that looming detectors can emerge in developing networks through a simple interplay of structured inputs and plasticity.
+With this in mind, we here ask three specific questions. We test whether it is possible to detect functional connections between tectal neurons from calcium imaging recordings. Then, we investigate whether the topology of connectivity graphs we detected in tectal networks may support collision detection. Finally, we check whether looming detection can emerge during reinforcement learning in a computational model, and whether the statistics of modeled looming-selective networks matches that of biological networks. If emergence of looming detectors is replicated in a model governed by simple developmental rules and patterned activation \citep{pietri2017emergence, gao2015simplicity}, we can try use this model to reverse-engineer developmental mechanisms acting in a real biological brain \citep{linderman2017constrain}. This general approach proved to be fruitful in recent years, as several complex network phenomena, including high-order receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules \citep{bassett2018models}. Here we show that our model predicted some, but not all aspects of topology and functionality of looming-sensitive networks, making it hard to draw simple conclusions. Nevertheless, we report several new findings, including some surprising positive and negative results.
 
 \section*{Results}
 
