--- a/refs.bib
+++ b/refs.bib
@@ -174,6 +174,17 @@
   publisher={Elsevier}
 }
 
+@article{mclaughlin2003retinotopic,
+  title={Retinotopic map refinement requires spontaneous retinal waves during a brief critical period of development},
+  author={McLaughlin, Todd and Torborg, Christine L and Feller, Marla B and O'Leary, Dennis DM},
+  journal={Neuron},
+  volume={40},
+  number={6},
+  pages={1147--1160},
+  year={2003},
+  publisher={Elsevier}
+}
+
 @article{newman2003mixing,
   title={Mixing patterns in networks},
   author={Newman, Mark EJ},
@@ -1088,6 +1099,17 @@
   publisher={Soc Neuroscience}
 }
 
+@article{dunn2016escapesZF,
+  title={Neural circuits underlying visually evoked escapes in larval zebrafish},
+  author={Dunn, Timothy W and Gebhardt, Christoph and Naumann, Eva A and Riegler, Clemens and Ahrens, Misha B and Engert, Florian and Del Bene, Filippo},
+  journal={Neuron},
+  volume={89},
+  number={3},
+  pages={613--628},
+  year={2016},
+  publisher={Elsevier}
+}
+
 @article{felch2016,
   title={Multisensory integration in the developing tectum is constrained by the balance of excitation and inhibition},
   author={Felch, Daniel L and Khakhalin, Arseny S and Aizenman, Carlos D},
@@ -1166,6 +1188,16 @@
   pages={179--187},
   year={2016},
   publisher={Elsevier}
+}
+
+@article{rind2016locust,
+  title={Two identified looming detectors in the locust: ubiquitous lateral connections among their inputs contribute to selective responses to looming objects},
+  author={Rind, F Claire and Wernitznig, Stefan and P{\"o}lt, Peter and Zankel, Armin and G{\"u}tl, Daniel and Sztarker, Julieta and Leitinger, Gerd},
+  journal={Scientific reports},
+  volume={6},
+  pages={35525},
+  year={2016},
+  publisher={Nature Publishing Group}
 }
 
 @article{thompson2016ensembles,
@@ -1272,6 +1304,17 @@
   volume={6},
   year={2017},
   publisher={eLife Sciences Publications, Ltd}
+}
+
+@article{von2017fruitfly,
+  title={Feature integration drives probabilistic behavior in the Drosophila escape response},
+  author={von Reyn, Catherine R and Nern, Aljoscha and Williamson, W Ryan and Breads, Patrick and Wu, Ming and Namiki, Shigehiro and Card, Gwyneth M},
+  journal={Neuron},
+  volume={94},
+  number={6},
+  pages={1190--1204},
+  year={2017},
+  publisher={Elsevier}
 }
 
 @article{zenke2017temporal,
