--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 
 \section*{Abstract}
 % 179 words
-Looming stimuli evoke behavioral responses in most sighted animals, yet mechanisms of looming detection in vertebrates are poorly understood. In this study, we use high-speed calcium imaging to reconstruct connectivity within small subsets of neurons in the optic tectum of \textit{Xenopus} tadpoles. We report that reconstructed networks had non-random structure, with looming selective cells serving as activation sinks, and describe differences in degree distribution and network modularity between younger and older animals. We then compare these results to predictions from a computational developmental model of the tectum, governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, and synaptic competition, and driven by structured sensory inputs. Our model developed robust looming selectivity and developed structured connectivity that replicated some effects observed in imaging experiments, including changes in modularity and degree distribution. Other effects predicted by the model (changes in hierarchy, efficiency, and spatial distribution of selective cells) were not observed in biological experiments. Finally, by comparing several reduced models, we predict which developmental rules may be most critical for the emergence of looming selectivity in the brain.
+Looming stimuli evoke behavioral responses in most sighted animals, yet mechanisms of looming detection in vertebrates are poorly understood. In this study, we use high-speed calcium imaging to reconstruct connectivity within small subsets of neurons in the optic tectum of \textit{Xenopus} tadpoles. We report that reconstructed tectal networks had non-random structure, with looming selective cells serving as activation sinks, and differences in degree distribution and network modularity between younger and older animals. We then compare these results to predictions from a computational developmental model of the tectum, governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured sensory inputs. Our model developed robust looming selectivity and structured connectivity that replicated some patterns observed in imaging experiments, including changes in modularity and degree distribution. Other effects predicted by the model (changes in hierarchy, efficiency, and spatial distribution of selective cells) were not observed in biological experiments. Finally, by comparing several reduced models, we predict which developmental rules may be most critical for the emergence of looming selectivity in the brain.
 %TC:ignore 
 \bigskip
 
@@ -138,7 +138,7 @@ We performed calcium imaging experiments in 14 stage 45-46 tadpoles, and 16 stag
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig1.pdf}
 \caption{
-Experimental design overview. \textbf{A}. Visual stimulation: four representative frames from each stimulus type. \textbf{B}. Schematic of the preparation, with stimulation fiber on the left, and microscope objective on top. \textbf{C}. View of the optic tectum during calcium imaging recording. \textbf{D}. Regions of interest for video in C, with darker cells having stronger responses. \textbf{E}. Typical fluorescence responses to flash (F), scramble (S) and looming (L) stimuli from three cells in the tectum. \textbf{F}. Spiking estimations for these fluorescence traces. \textbf{G}. Average full-brain responses to stimuli of every type, wich 95\% confidence interval band, for one representative experiment. }
+Experimental design overview. \textbf{A}. Visual stimulation: four representative frames from each stimulus type. \textbf{B}. Schematic of the preparation, with stimulation fiber on the left, and microscope objective on top. \textbf{C}. View of the optic tectum during calcium imaging recording. \textbf{D}. Regions of interest (cells) for brain shown in C, with darker markers representing cells with stronger responses. \textbf{E}. Typical fluorescence responses to Flash (F), Scrambled (S) and Looming (L) stimuli from three cells in the tectum. \textbf{F}. Spiking estimations for these fluorescence traces. \textbf{G}. Average full-brain responses to stimuli of every type, for one representative experiment, shown with a 95\% confidence interval band. }
 \end{figure*}
 
 \subsection*{Responses and stimulus selectivity}
@@ -150,7 +150,7 @@ The total output of observed networks tended to be higher in response to looming
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig2.pdf}
 \caption{
-Selectivity analysis. \textbf{A}. Average brain responses (sum of activity of all recorded cells over time), for each stimulus type, in each experiment. Black lines show grand averages across experiments, separately for younger and older tadpoles. \textbf{B}. Cumulative full brain response (an integral under the curves shown in A) for each experiment, across three stimulus types. \textbf{C}. A sample selectivity map, with hue coding preference for Flash (more red), Scrambled (more green), and Looming (more blue) stimuli. \textbf{D}. Average histograms of cell selectivity distributions, for younger (violet) and older (black) tadpoles. Younger tadpoles have more cells with high selectivity. \textbf{E}. A correlation between Flash-Scramble and Flash-Looming selectivity of individual cells in a typical experiment. \textbf{F}. A correlation between Scramble-Looming and Flash-Looming selectivity of individual sells in the same experiment. \textbf{G}. Stimulus encoding in different experiments; no difference in development.}
+Selectivity analysis. \textbf{A}. Average brain responses (sum of activity of all recorded cells over time), for each stimulus type, in each experiment, superimposed. Black lines show grand averages across all experiments, separately for younger and older tadpoles. \textbf{B}. Cumulative full brain responses (an integral under the curves shown in A) for each experiment, across three stimulus types. \textbf{C}. A sample selectivity map, with hue coding preference for Flash (more red), Scrambled (more green), and Looming (more blue) stimuli. \textbf{D}. Average histograms of cell selectivity distributions, for younger (violet) and older (black) tadpoles; error bars show 95\% confidence intervals, for clarity given in only one direction. Younger tadpoles had more highly selective cells than older tadpoles. \textbf{E}. A correlation between Flash-Scramble and Flash-Looming selectivity of individual cells in a typical experiment. \textbf{F}. A correlation between Scramble-Looming and Flash-Looming selectivity of individual sells in the same sample experiment. \textbf{G}. Stimulus encoding in different experiments, for two developmental stages.}
 \end{figure*}
 
 To quantify stimulus selectivity (Figure 2C), for each tectal cell we calculated Cohen’s $d$ effect sizes between cumulative responses to different stimuli. We considered two measures of selectivity: that for "looming over flash" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" (that can only rely on spatial properties of stimuli, as they had the same dynamics). Looking at cumulative responses was of course a simplification, as in real life, animals respond to stimuli even as they are still unrolling \citep{peron2009adaptation, khakhalin2014}, and not after a timed 1 second-long presentation. We however had no way to justify any type of dynamic thresholding, and so opted for the simplest possible approach.
@@ -172,7 +172,7 @@ Knowing where the center of a looming stimulus was projected within the tectum, 
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig3.pdf}
 \caption{
-Spatiotemporal organization of responses. \textbf{A}. Two first components identified in tectal responses (Principal Component Analysis with promax rotation).  \textbf{B}. Cells in a sample experiment, colored by the contribution of early (green) and late (purple) response components. Black cross shows the estimated position of the retinotopy center. \textbf{C}. Average change of Flash-Looming selectivity with distance from the retinotopy center, for stage 46 (left) and stage 49 (right) tadpoles. \textbf{D}. Adjusted correlation matrix for instantaneous activation of different neurons across all stimuli in a sample experiment (same as in B). \textbf{E}. Ensembles identified from the correlation matrix (same sample experiment). \textbf{F}. The number of ensembles, identified in younger and older tadpoles. \textbf{G}. Maximal modularity of ensemble partition. \textbf{H}. Ensemble spatial compactness.}
+Spatiotemporal organization of responses. \textbf{A}. Two first components (Principal Component Analysis with promax rotation) identified in tectal responses in a typical experiment.  \textbf{B}. Neurons from the same sample experiment as in A, shown as they were located in the tectum, and colored by the contribution of early (green) and late (purple) response components. Black cross shows the estimated position of the retinotopy center. \textbf{C}. Average change of Flash-Looming selectivity with distance from the retinotopy center, for stage 46 (left) and stage 49 (right) tadpoles; error bars show 95\% confidence intervals. \textbf{D}. Adjusted correlation matrix for instantaneous activation of different neurons across all stimuli in a sample experiment (same as in B). \textbf{E}. Ensembles identified from the correlation matrix. \textbf{F}. The number of ensembles, identified in younger and older tadpoles. \textbf{G}. Maximal modularity of ensemble partition. \textbf{H}. Ensemble spatial compactness.}
 \end{figure*}
 
 \subsection*{Variability and neuronal ensembles}
@@ -186,7 +186,7 @@ To better describe and visualize network activation variability, we used spectra
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig4.pdf}
 \caption{
-Connectivity reconstruction.  \textbf{A}. Delayed correlations between activities of different neurons. \textbf{B}. Adjusted transfer entropy estimations. \textbf{C}. Estimated weighted adjacency matrix. \textbf{D}. Connectivity reconstruction for one experiment, with location of each cell preserved. Node color indicates its selectivity. \textbf{E}. Same graph, optimized for graph presentation. Position of individual nodes no longer represents the position of tectal cells. \textbf{F}. In-degree distribution for younger (violet) and older (black) tadpoles, shown in log-scale. Significant changes for individual degrees ($p_t<$ 0.05) are marked with asterisks. \textbf{G}. Same as C, but for out-degree distributions. \textbf{H}. Network power increased in development, as older tadpoles had a slightly sharper slope to their degree distributions. }
+Connectivity reconstruction.  \textbf{A}. Delayed correlations between activities of different neurons in a sample experiment. \textbf{B}. Adjusted transfer entropy estimations for the same experiment. \textbf{C}. Estimated weighted adjacency matrix. \textbf{D}. Connectivity reconstruction, with location of each cell preserved. Node color indicates its selectivity. \textbf{E}. Same graph as in D, in visually optimized layout. Positions of individual nodes no longer represent the position of tectal cells. \textbf{F}. In-degree distribution for younger (violet) and older (black) tadpoles, presented in log-scale, with error bars showing 95\% confidence intervals. Significant changes for individual degrees ($p_t<$ 0.05) are marked with asterisks. \textbf{G}. Same as C, but for out-degree distributions. \textbf{H}. Network power $\gamma$ increased in development, as older tadpoles had a slightly sharper slope to their degree distributions. }
 \end{figure*}
 
 The high speed of imaging used in this study (84 frames/s) allowed us to look not just at instantaneous correlations between activation of individual neurons, but at the \textit{propagation} of signals through the network. To reconstruct network connectivity, we calculated pairwise transfer entropy \citep{gourevitch2007te, stetter2012te} between activity traces of individual cells. Intuitively, for each pair of neurons $i$ and $j$ we quantified the amount of additional information that past activity of neuron $i$ can offer to predict current activity of neuron $j$. This is conceptually similar to calculating a cross-correlation between the activity of neuron $i$ at each frame $t$, and the activity of neuron $j$ at each frame $t+1$ (Figure 4A), except that transfer entropy has higher power, lower noise, and does not make assumptions about the type of influence neuron $i$ has over neuron $j$ (\citealt{stetter2012te}; Figure 4B).
@@ -210,10 +210,10 @@ For each connectivity graph reconstructed from tadpole tecta, we calculated seve
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig5.pdf}
 \caption{
-Global network properties. Filled markers show values from experiments; empty markers show values for matching rewired networks; black squares show averages. Network diagrams to the right of each plot present sample graphs with low and high values of respective network measure. \textbf{A}. Global network efficiency was lower than expected for stage 46 tadpoles. \textbf{B}. Global clustering was higher than expected by chance, for both developmental stages. \textbf{C}. Network modularity increased in development.  \textbf{D}. Network hierarchy was higher than expected by chance, for both developimental stages. }
+Global network properties. Filled markers show values from experiments; empty markers show averaged values for matching rewired networks; black squares show averages for each group. Network diagrams to the right of each plot show cartoon representation of graphs with low and high values of respective network measures. \textbf{A}. Global network efficiency was lower than expected for stage 46 tadpoles. \textbf{B}. Global clustering was higher than expected by chance, for both developmental stages. \textbf{C}. Network modularity increased in development.  \textbf{D}. Network hierarchy was higher than expected by chance, for both developmental stages. }
 \end{figure*}
 
-The measure of average "connectedness" in the graph, known as \textbf{network efficiency}, is defined as the average shortest path connecting two random nodes in the network \citep{latora2001efficiency, rubinov2010toolbox}. This value is high when short paths made of high-weight edges tend to connect any two randomly chosen nodes in the graph, making it easy for signals to propagate within the network; the value is low when some pairs of nodes are far from each other on a graph (Figure 5A). We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for a randomized network with matching degree distribution ($d=-$0.3, paired $p_t=$ 0.04 and $d=-$0.3, paired $p_t=$ 0.06 for younger and older tadpoles respectively). It was not clear whether efficiency changed with age ($d=-$0.8, $p_t=$ 0.06).
+The measure of average "connectedness" in the graph, known as \textbf{network efficiency}, is defined as the average shortest path connecting two random nodes in the network \citep{latora2001efficiency, rubinov2010toolbox}. This value is high when short paths made of high-weight edges tend to connect any two randomly chosen nodes in the graph, making it easy for signals to propagate within the network; the value is low when some pairs of nodes are far from each other on a graph (Figure 5A). We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was lower than expected for a randomized network with matching degree distribution ($d=-$0.3, paired $p_t=$ 0.04 and $d=-$0.3, paired $p_t=$ 0.06 for younger and older tadpoles respectively). It was not clear whether efficiency changed with age ($d=-$0.8, $p_t=$ 0.06).
 
 The \textbf{global clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes being a part a triangle with a third node connected to both of them (Figure 5B). The value of clustering coefficient in our networks was very small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but slightly larger than expected in a randomly rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals). This means that neurons with more than two connections were likely to form clusters. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
 
@@ -223,17 +223,17 @@ Network \textbf{modularity} is the most commonly used measure of mesoscale netwo
 
 \subsection*{Selectivity Mechanisms}
 
-Even though the exact architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons have to integrate streams of information coming from different parts of the visual field. We therefore hypothesized that the position of selective neurons within connectivity graphs would not be random \citep{timme2016degree}. To verify that, for each reconstructed network we tested correlations between looming selectivity of each neuron and values that quantify its place within the network, known as measures of \textbf{node centrality}.
+Even though the exact architecture of collisiohttps://www.overleaf.com/project/5bba84a33dd0cc0306080f39n-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons have to integrate streams of information coming from different parts of the visual field. We therefore hypothesized that the position of selective neurons within connectivity graphs would not be random \citep{timme2016degree}. To verify that, for each reconstructed network we tested correlations between looming selectivity of each neuron and values that quantify its place within the network, known as measures of \textbf{node centrality}.
 
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig6.pdf}
 \caption{
-Local network properties for cells selective for looming stimuli. \textbf{A}. Cells with higher Katz centrality had a weak tendency to be selective for looming stimuli. A diagram inset illustrates the concept of Katz centrality: for this graph, cells with low centrality (sources) are pale, while cells with higher centrality (sinks) are darker. \textbf{B}. Correlation coefficients for Katz centrality of each cell and its selectivity for looming stimuli, calculated for each experiment, and shown by developmental stage. \textbf{C}. Correlation coefficients for node in-degree and its selectivity for looming stimuli, in each experiment, shown by developmental stage. \textbf{D}. Correlation coefficients (Spearman) for average activation of each cell, and its selectivity for looming stimuli, calculated for each experiment, and shown by developmental stage. }
+Local network properties (centrality) for cells selective for looming stimuli. \textbf{A}. Cells with higher Katz centrality had a weak tendency to respond stronger to looming stimuli. A diagram inset illustrates the concept of Katz centrality: for this graph, cells with low centrality (sources) are pale, while cells with higher centrality (sinks) are darker. \textbf{B}. Correlation coefficients for Katz centrality of each cell and its selectivity for looming stimuli, calculated for each experiment, and shown by developmental stage. \textbf{C}. Correlation coefficients for node in-degree and its selectivity for looming stimuli, in each experiment, shown by developmental stage. \textbf{D}. Correlation coefficients for average activation of each cell, and its selectivity for looming stimuli, in each experiment, shown by stage. }
 \end{figure*}
 
-To identify information sinks, for each cell we calculated its \textbf{Katz centrality} within the graph \citep{katz1953original, fletcher2018katz}. By definition, nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph is more likely to eventually cause activation of these nodes, compared to nodes with low Katz centrality. We found that when all cells from all experiments are considered (Figure 6A), there was a very weak but significant correlation between looming selectivity of cells and their Katz centrality ($r =$ 0.02, $p_{r} =$ 1e-6, $n=$2487). More convincingly, correlation coefficients between Katz centrality and looming selectivity were positive in 19/30 experiments (Figure 6B; average $r=$ 0.09$\pm$0.20 $p_{t1}=$ 0.03); there was no change of this effect in development ($p_t=$ 0.5).
+To identify information sinks, for each cell we calculated its \textbf{Katz centrality} within the graph \citep{katz1953original, fletcher2018katz}. By definition, nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph is more likely to eventually cause activation of these nodes, compared to nodes with low Katz centrality. We found that when all cells from all experiments are considered (Figure 6A), there was a very weak but significant correlation between looming selectivity of cells and their Katz centrality ($r =$ 0.02, $p_{r} =$ 1e-6, $n=$2487). More convincingly, correlation coefficients between Katz centrality and looming selectivity were positive in 19/30 experiments (Figure 6B; average $r=$ 0.09$\pm$0.20 $p_{t1}=$ 0.03); there was no obvious change of this effect in development ($p_t=$ 0.5).
 
-A node may have high Katz centrality for two reasons: it may receive a higher number of incoming connections (higher in-degree), or have chains of directed edges leading to it. To see which of these patterns may be at work here, we checked whether looming-selective cells tended to receive more incoming connections, compared to non-selective cells \citep{litwin2014assemblies}. When all points were considered, there was no correlation between in-degree and cell selectivity ($p_{r}=$0.3, $n=$ 2487), but for individual experiments correlation coefficients between in-degree and selectivity were positive in 20/30 of cases (Figure 6C, $p_{t1}=$ 0.03). There was no change of this correlation in development ($p_t=$ 0.5).
+A node may have high Katz centrality for two reasons: it may receive a higher number of incoming connections (higher in-degree), or have chains of directed edges leading to it. To see which of these patterns may be at work here, we checked whether looming-selective cells tended to receive more incoming connections, compared to non-selective cells \citep{litwin2014assemblies}. When all points were considered, there was no correlation between in-degree and cell selectivity ($p_{r}=$0.3, $n=$ 2487), but for individual experiments correlation coefficients between in-degree and selectivity were positive in 20/30 of cases (Figure 6C, $p_{t1}=$ 0.03). There was no obvious change of this correlation in development ($p_t=$ 0.5).
 
 As cells with higher Katz centrality tend to be activated more often \citep{fletcher2018katz}, we checked whether selectivity for looming stimuli correlated with cell \textbf{average spiking activity} in our recordings. We found that both in younger and older animals, actively spiking cells tended to have stronger looming selectivity (for stage 46 average $r_S=$ 0.34$\pm$0.20, $r>$ 0 with $p_{t1}=$ 2e-5; for stage 49 $r_S=$ 0.14$\pm$0.26, $p_{t1}=$ 0.04, indicating a significant decrease with development $p_t=$ 4e-4; across all cells $r_S=$ 0.07, $p_r=$ 4e-4). This matches predictions from our studies of intrinsic excitability in the tectum \citep{busch2019}. For this analysis we used Spearman rather than Pearson correlation, as 4 experiments had single neurons (one per experiment) with extremely high activity levels that acted as influential points. Excluding these 4 neurons and using Pearson correlation yielded very similar results.
 
@@ -254,7 +254,7 @@ As our recordings were noisy, and sample sizes relatively small, it was hard to 
 \begin{figure*}[!t]
 \includegraphics[width=\linewidth]{fig7.pdf}
 \caption{
-Developmental model. \textbf{A}. Model diagram (see text). \textbf{B}. Typical adjacency matrix before simulation (random seed). \textbf{C}. Typical adjacency matrix by the end of simulation. \textbf{D}. Visualization of neuronal connections in space, with cell positions properly represented. Node color shows its looming selectivity. \textbf{E}. Same connectivity graph as in C, but rearranged to reveal its structure. \textbf{F}. Evolution of all input weights to one sample cell, over the course of simulation. \textbf{G}. Evolution of spiking threshold for 9 sample cells, over the course of simulation. \textbf{H}. Response amplitudes to three testing stimuli (Flash, Scramble, Looming) for all cells in one simulation. }
+Developmental model. \textbf{A}. Model diagram (see the text). \textbf{B}. Typical adjacency matrix before simulation (random seed). \textbf{C}. Typical adjacency matrix by the end of simulation. \textbf{D}. Visualization of neuronal connections in space, with cell positions properly represented. Green and yellow nodes are selective for looming stimuli. \textbf{E}. Same graph as in C, but rearranged to reveal its structure. \textbf{F}. Evolution of all input weights to one sample cell, over the course of simulation. \textbf{G}. Evolution of spiking threshold for 9 sample cells, over the course of simulation. \textbf{H}. Response amplitudes to three testing stimuli (Flash, Scramble, Looming) for all cells in one simulation. }
 \end{figure*}
 
 We introduced three simple developmental rules: spike-time-dependent plasticity (STDP), homeostatic plasticity, and synaptic competition. Our implementation of STDP approximated biological STDP observed in the tectum \citep{zhang1998stdp, mu2006stdp}: if two cells were active one after another in two consecutive time frames, and they were connected with a synapse, the weight of this synapse was increased. Conversely, if two cells were active within the same time frame, the weight of a synapse connecting them was decreased, as it means that one cell would try to activate another cell immediately after it had spiked (see Figure 7F for a typical evolutiono of synaptic weights). The homeostatic plasticity rule adjusted excitability thresholds, trying to keep spiking output of each neuron constant on average (\citealt{pratt2007intrinsic, turrigiano2011}; Figure 7G). Synaptic competition attempted to keep as close to a constant as possible both the sum of synaptic inputs to each neuron, and the sum of outputs from each neuron. In practice, it means that every time a synapse connecting neurons $i$ and $j$ increased in strength, all output synapses of neuron $i$ and all input synapses of nuron $j$ were scaled down a bit \citep{cohen2002synreview, munz2014hebbian, hamodi2016nmda}.
@@ -264,7 +264,7 @@ With these three developmental rules at play, we exposed the model to patterned 
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig8.pdf}
 \caption{
-Model results. Each plot shows how one network measure changed as the model developed. Lines of different colors represent different model types: red is for the default model, while other colors show sensitivity analyses. See the text for details.}
+Model results. Each plot shows how one network measure changed as the model developed. Lines of different colors represent different model types: red is for the default model; other colors show sensitivity analyses. See the text for details.}
 \end{figure*}
 
 The summary of modeling results is shown in Figure 8 (red line in each plot for the base model). In development, the network became selective for Looming stimuli, both in terms of total response (by the end of development it responded to Looming 99$\pm$9\% stronger than to Flash; Figure 8A) and average selectivity (mean Cohen $d$ of responses across all cells = 1.09$\pm$0.10; Figure 8B). The share of cells selective for Looming stimuli also increased (Figure 8C), and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells (Figure 8D).
@@ -288,7 +288,7 @@ To conclude whether predictions of our model matched biological experiments, we 
 %\newgeometry{left=1in} % This page will have smaller margins
 \begin{table}
     \input{table1.tex}
-    \caption{A summary of network phenomena observed in biological experiments, in comparison with simulation results for the \textbf{base} model, and several reduced models (see main text). In the table, we use $\checkmark$ for "yes", $\times$ for "no", $\land$ for "increase", $\lor$ for "decrease", $\land \lor$ for "increase followed by decrease", and $=$ for "no change". FL stands for "Flash-Looming" selectivity; SL - for Scrambled-Looming selectivity; "cor" abbreviates "correlation".}
+    \caption{A summary of network phenomena observed in biological experiments, in comparison with simulation results for the \textbf{base} model, and several reduced models (see main text). In the table, we $\checkmark$ is used for "yes", $\times$ for "no", $\land$ for "increase", $\lor$ for "decrease", $\land \lor$ for "increase followed by decrease", and $=$ for "no change". FL stands for "Flash-Looming" selectivity; SL - for Scrambled-Looming selectivity; "cor" abbreviates "correlation".}
 \end{table}
 %\restoregeometry
 
